--- a/jex00/jex00/pom.xml
+++ b/jex00/jex00/pom.xml
@@ -22,6 +22,7 @@
         <javax.servlet.jsp-api-version>2.3.3</javax.servlet.jsp-api-version>
         <javax.servlet.jsp.jstl-api-version>1.2.2</javax.servlet.jsp.jstl-api-version>
         <taglibs-standard-impl-version>1.2.5</taglibs-standard-impl-version>
+        <org.slf4j-version>1.6.6</org.slf4j-version>
         <junit-version>4.12</junit-version>
     </properties>
 
@@ -39,6 +40,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring-webmvc-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
@@ -84,6 +91,20 @@
             <artifactId>spring-test</artifactId>
             <version>4.2.9.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
 
         <!-- end of custom -->
     </dependencies>
