--- a/jex01/pom.xml
+++ b/jex01/pom.xml
@@ -79,7 +79,22 @@
       <version>1.2.17</version>
     </dependency>
 
+    <!-- data-bind json -->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.3</version>
+    </dependency>
 
+
+    <!-- file upload -->
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
 
 
   </dependencies>
